# mediactrl

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.in  mediactrl.spec
doc/: Makefile.am  Makefile.in  mediactrl-doxygen-footer.html  mediactrl-doxygen.cfg
docker/: Dockerfile  Dockerfile-centos
src/: CfwStack.cxx  CfwStack.h  ControlPackage.cxx  ControlPackage.h  Makefile.am  Makefile.in  MediaCtrl.cxx  MediaCtrl.h  MediaCtrlClient.cxx  MediaCtrlClient.h  MediaCtrlCodec.cxx  MediaCtrlCodec.h  MediaCtrlEndpoint.cxx  MediaCtrlEndpoint.h  MediaCtrlMemory.h  MediaCtrlRtp.cxx  MediaCtrlRtp.h  MediaCtrlSip.cxx  MediaCtrlSip.h  RemoteMonitor.cxx  RemoteMonitor.h  prototype.cxx
src/codecs/: AlawCodec.cxx  GsmCodec.cxx  Makefile.am  Makefile.in  UlawCodec.cxx
src/stuff/: configuration.xml.sample
