#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(mediactrl-prototype, 0.4.0)
AC_COPYRIGHT(Copyright (C) Lorenzo Miniero)

AM_INIT_AUTOMAKE($PACKAGE_NAME, $PACKAGE_VERSION)
AC_CONFIG_SRCDIR([src/MediaCtrlCodec.h])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_LIBTOOL
AC_CHECK_PROG(HAVE_DOXYGEN, doxygen, true, false)
AM_CONDITIONAL(HAVE_DOXYGEN,$HAVE_DOXYGEN)
if test $HAVE_DOXYGEN = "false"; then
             AC_MSG_WARN([*** doxygen not found, docs will not be built])
fi

# Checks for libraries.
AC_CHECK_LIB(cares, ares_init, , AC_MSG_ERROR([Please install libares (reSIProcate)]))
FFMPEG_ALTDIR=false
AC_CHECK_HEADER([ffmpeg/avcodec.h], [HAVE_LIBAVCODEC=true], [HAVE_LIBAVCODEC=false])
AM_CONDITIONAL(HAVE_LIBAVCODEC,$HAVE_LIBAVCODEC)
if test $HAVE_LIBAVCODEC = "false"; then
        OLDCPPFLAGS="${CPPFLAGS}"
        CPPFLAGS="${CPPFLAGS} -I/usr/include/ffmpeg"
		AC_CHECK_HEADER([libavcodec/avcodec.h], [HAVE_LIBAVCODEC=true], [HAVE_LIBAVCODEC=false])
        CPPFLAGS="${OLDCPPFLAGS}"
		AM_CONDITIONAL(HAVE_LIBAVCODEC,$HAVE_LIBAVCODEC)
		if test $HAVE_LIBAVCODEC = "false"; then
			  echo "Please install libavcodec (ffmpeg)"
			  exit 1
		else
			  FFMPEG_ALTDIR=true
		fi
fi
AC_CHECK_HEADER([ffmpeg/avformat.h], [HAVE_LIBAVCODEC=true], [HAVE_LIBAVCODEC=false])
AM_CONDITIONAL(HAVE_LIBAVCODEC,$HAVE_LIBAVCODEC)
if test $HAVE_LIBAVCODEC = "false"; then
        OLDCPPFLAGS="${CPPFLAGS}"
        CPPFLAGS="${CPPFLAGS} -I/usr/include/ffmpeg"
		AC_CHECK_HEADER([libavformat/avformat.h], [HAVE_LIBAVCODEC=true], [HAVE_LIBAVCODEC=false])
        CPPFLAGS="${OLDCPPFLAGS}"
		AM_CONDITIONAL(HAVE_LIBAVCODEC,$HAVE_LIBAVCODEC)
		if test $HAVE_LIBAVCODEC = "false"; then
			  echo "Please install libavformat (ffmpeg)"
			  exit 1
		else
			  FFMPEG_ALTDIR=true
		fi
fi
LIBS="-ldl -lavcodec -lavformat $LIBS "
AM_CONDITIONAL(FFMPEG_ALTDIR,$FFMPEG_ALTDIR)
AC_CHECK_LIB(crypto, CRYPTO_malloc, , AC_MSG_ERROR([Please install libcrypto]))
AC_CHECK_LIB(curl, curl_global_init, , AC_MSG_ERROR([Please install libcurl]))
AC_CHECK_LIB(expat, XML_Parse, , AC_MSG_ERROR([Please install libexpat]))
AC_CHECK_LIB(gsm, gsm_destroy, , AC_MSG_ERROR([Please install libgsm]))
AC_CHECK_LIB(ortp, ortp_init, , AC_MSG_ERROR([Please install libortp]))
AC_CHECK_LIB(ortp, rtp_session_get_local_rtcp_port, CPPFLAGS="${CPPFLAGS} -D__ORTP_SUPPORTS_RTCP_PORT_CHANGE")
AC_CHECK_LIB(pthread, pthread_create, , AC_MSG_ERROR([Please install libpthread]))
AC_CHECK_LIB(ssl, SSL_accept, , AC_MSG_ERROR([Please install libssl]))
AC_CHECK_HEADER([boost/regex.hpp], [LIBS="-lboost_regex $LIBS "], AC_MSG_ERROR([Please install libboost]))
AC_CHECK_HEADER([cc++/thread.h], [LIBS="-lccgnu2 $LIBS "], AC_MSG_ERROR([Please install common-c++2]))

#gc
AC_ARG_ENABLE(gc,
        [  --enable-gc             Turn on garbage collection (needs gc, default=no)],
        [
			if test "${enableval}" = "no"; then
				NEED_GC="no"
			else
				NEED_GC="yes"
			fi
		],
        [NEED_GC="no"]
)
if test $NEED_GC = "yes"; then
	AC_CHECK_HEADER(
		[gc.h],
		[
			HAVE_GC=true
			LIBS="-lgc -lgccpp $LIBS "
		],
		AC_MSG_ERROR([Please install gc if you want garbage collection])
	)
else
	HAVE_GC=false
fi
AM_CONDITIONAL(HAVE_GC,$HAVE_GC)

#reSIProcate
AC_ARG_WITH(resip, [  --with-resip=path       Set prefix where reSIProcate can be found (e.g. /opt/resiprocate/) [default=/usr] ], [resip_prefix=${withval}], [resip_prefix="/usr"])
if test "${resip_prefix}" != "/usr" ; then
	RESIP_CFLAGS="-I${resip_prefix}/include"
	RESIP_LIBS="-I${resip_prefix}/lib"
fi
CPPFLAGS_save=$CPPFLAGS
CPPFLAGS=$RESIP_CFLAGS
AC_CHECK_HEADER([rutil/ThreadIf.hxx], [LIBS="-lrutil $LIBS "], AC_MSG_ERROR([Please install librutil (reSIProcate)]))
AC_CHECK_HEADER([resip/dum/ServerInviteSession.hxx], [LIBS="-ldum $LIBS "], AC_MSG_ERROR([Please install libdum (reSIProcate)]))
AC_CHECK_HEADER([resip/stack/SipStack.hxx], [LIBS="-lresip $LIBS "], AC_MSG_ERROR([Please install libresip (reSIProcate)]))
CPPFLAGS=$CPPFLAGS_save

# Checks for header files.
AC_HEADER_DIRENT
AC_CHECK_HEADERS([arpa/inet.h netinet/in.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_ERROR_AT_LINE
AC_HEADER_STDC
AC_FUNC_SELECT_ARGTYPES
AC_TYPE_SIGNAL
AC_CHECK_FUNCS([inet_ntoa memset mkdir select socket strcasecmp strstr])

AC_CONFIG_FILES([Makefile
                 doc/Makefile
                 src/Makefile
                 src/packages/Makefile
                 src/codecs/Makefile])
AC_OUTPUT
